objects/Test_Deployment__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <label>Contact Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Email__c</fullName>
        <label>Test_Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Test_Deployment</label>
    <nameField>
        <label>Test_Deployment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test_Deployments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>